--- a/css/style.css
+++ b/css/style.css
@@ -148,8 +148,19 @@ p {
 }
 
 .slider img {
-    width: 100%; 
+    width: 50%;
+    margin: 0 auto;
+
 }
+
+/* Recent Changes */
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+    display: block;
+    max-width: 100%;
+    height: 50%;
+}
+
 
 #carousel-slider {
   position: relative;
